// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SimpleTable Datum 1`] = `
<div
  id="root"
>
  <table
    class="MuiTable-root makeStyles-table"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell "
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell "
          scope="col"
        >
          Status
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell "
          scope="col"
        >
          Age
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell "
          scope="col"
        >
          Long Field Name
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some name0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some status0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some age0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some name1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some status1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some age1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some name2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some status2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some age2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots SimpleTable Getter 1`] = `
<div
  id="root"
>
  <table
    class="MuiTable-root makeStyles-table"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell "
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell "
          scope="col"
        >
          Status
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell "
          scope="col"
        >
          Age
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell "
          scope="col"
        >
          Long Field Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell "
          scope="col"
        >
          Number
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    >
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some name0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some status0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some age0
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          22
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some name1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some status1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some age1
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          33
        </td>
      </tr>
      <tr
        class="MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some name2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some status2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          some age2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-body"
        >
          44
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
